--- a/src/main/resources/assets/waypoints/lang/zh_cn.json
+++ b/src/main/resources/assets/waypoints/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
   "menu.waypoints": "旅行锚点",
-  "waypoints.info": "[ 旅行锚点 ] %d"
+  "waypoints.info": "[ 旅行锚点 ] %d",
+  "waypoints.link_plus": "[ 链接增强 ] xaero小地图share链接增强解析"
 }
