--- a/src/main/resources/assets/waypoints/lang/zh_cn.json
+++ b/src/main/resources/assets/waypoints/lang/zh_cn.json
@@ -1,5 +1,9 @@
 {
   "modmenu.nameTranslation.modmenu": "旅行锚点",
   "settings.waypoints.link-plus": "[ 链接增强 ]",
-  "wp.list": "列出所有共享中的坐标点"
+  "waypoints.add": "向航点中添加坐标点%s§7/waypoints add",
+  "waypoints.remove": "从航点中移除坐标点%s§7/waypoints remove",
+  "waypoints.search": "在航点中搜索坐标点%s§7/waypoints search §f  §7§nXXX§r§7在哪",
+  "waypoints.list": "列出所有共享中的坐标点%s§7/waypoints list",
+  "waypoints.help": "查看坐标点的更多帮助%s§7/waypoints help"
 }
